--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "build": "webpack --config=./scripts/webpack.config.prod.js"
   },
   "devDependencies": {
+    "caniuse-lite": "^1.0.30000760",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.6.0",
+    "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
