--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Anton Segerkvist <anton.stefan.roine.segerkvist@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "watch": "webpack --watch --config=./scripts/webpack.config.prod.js",
     "build": "webpack --config=./scripts/webpack.config.prod.js",
     "serve": "yarn build && docker-compose up -d --build"
   },
