--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "caniuse-lite": "^1.0.30000760",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
     "node-sass": "^4.6.0",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
