--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "serve": "yarn build && docker-compose up -d --build"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "caniuse-lite": "^1.0.30000760",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -21,7 +24,14 @@
     "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
+    "vue-loader": "^13.5.0",
+    "vue-template-compiler": "^2.5.3",
     "webpack": "^3.8.1",
     "webpack-merge": "^4.1.1"
+  },
+  "dependencies": {
+    "vue": "^2.5.3",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   }
 }
